[package]
name = "wdb_config"
version = "1.0.0"
authors = ["alex@staticlibs.net"]
edition = "2018"

[build-dependencies]
embed-resource = "1.8"

[dependencies]
clipboard-win = "4.5.0"
native-tls = "0.2.11"
nwg = {version = "1.0.12", package = "native-windows-gui", features = ["all", "flexbox"]}
postgres = "0.19.7"
postgres-native-tls = "0.5.0"
winapi = "0.3.9"


